--- a/src/libs/options.css
+++ b/src/libs/options.css
@@ -1,7 +1,10 @@
+body{
+	font-family: "微软雅黑";
+}
 #title{
 	font-size : 40px;
-	margin : 20px;
-	margin-left :100px;
+	margin :20px 0 40px;
+	text-align: center;
 }
 
 
@@ -16,11 +19,21 @@
 	background-repeat:repeat;
 	height:10px;
 }
+#course_table{
+	border-collapse: collapse;
+	width:100%;
+}
 tr,th,td
 {
-	margin:none;
-	padding:none;
-	border: 1px solid #66CCFF;
+	border: 0px solid #66CCFF;
 	text-align:center;
 }
 
+#container {
+	width: 700px;
+	margin: 0 auto;
+}
+
+.exbtn{
+	width:100%
+}
