--- a/src/new.css
+++ b/src/new.css
@@ -1,3 +1,6 @@
+body{
+	font-family: 'Segoe UI Light', 'Open Sans', Verdana, Arial, Helvetica, sans-serif;
+}	
 .page{
 	width:980px;
 	margin: auto;
@@ -30,6 +33,9 @@
 	top:38px;
 	font-size: 42pt;
 	line-height: 44pt;
+}
+#main-title small{
+	font-size:20pt;
 }
 .title{
 	font-family: 'Segoe UI Light', 'Open Sans', Verdana, Arial, Helvetica, sans-serif;
@@ -85,6 +91,29 @@
 	text-decoration:none;
 	font-size:10px;
 }
+
+#status-bar{
+	width:100px;
+	height:30px;
+	position:absolute;
+	left:65%;
+	top:0;
+}
+.status-counter{
+	position:relative;
+	width:25px;
+	height:30px;
+	margin-left:3px;
+	margin-right:3px;
+	background:#115599;
+	float:left;
+	text-align:center;
+	font-size:14px;
+	color:white;
+	-webkit-box-shadow: 2px 2px 5px black;
+	line-height:30px;
+}
+	
 
 
 /*
