--- a/design/stylus/main.styl
+++ b/design/stylus/main.styl
@@ -17,16 +17,18 @@ $theme-flat = false
     color #FFF
   else
     background linear-gradient($brand-blue, darken($brand-blue, 10%))
-    box-shadow 0 -1px 0 lighten($brand-blue, 10%), \
-               0  1px 0 darken($brand-blue, 20%)
+    box-shadow inset 0  1px 0 lighten($brand-blue, 10%), \
+               inset 0 -1px 0 darken($brand-blue, 20%)
+    text-shadow 0 1px 1px darken($brand-blue, 50%)
     color #FFF
 
+html,
 body
   font 16px / 1.5 "微软雅黑"
 
 ::-webkit-scrollbar
   width 4px
-  background-color rgba(#000, 0.5)
+  height 4px
  
 ::-webkit-scrollbar-thumb
   border-radius 2px
@@ -35,6 +37,6 @@ body
 ::-webkit-scrollbar-button
   display none
 
-
-@import "_folders.styl"
+@import "_folder.styl"
+@import "_message.styl"
 
