--- a/design/stylus/_folder.styl
+++ b/design/stylus/_folder.styl
@@ -24,6 +24,7 @@ $folder-background = hsl(260deg, 10%, 15%)
         background linear-gradient(lighten($folder-background, 12%), lighten($folder-background, 10%))
         box-shadow inset 0  1px 0 lighten($folder-background, 20%), \
                    inset 0 -1px 0 darken($folder-background, 10%)
+        text-shadow 0 -1px 0 $folder-background
 
       color lighten($folder-background, 40%)
       overflow ellipsis
