--- a/design/stylus/main.styl
+++ b/design/stylus/main.styl
@@ -40,3 +40,9 @@ body
 @import "_folder.styl"
 @import "_message.styl"
 
+.pane-content
+  absolute top 0 left (350px + 250px)
+  bottom 0
+  right 0
+  background red
+  overflow hidden
