--- a/design/stylus/main.styl
+++ b/design/stylus/main.styl
@@ -37,12 +37,12 @@ body
 ::-webkit-scrollbar-button
   display none
 
+@import "_modal.styl"
 @import "_folder.styl"
 @import "_message.styl"
 
 .pane-content
-  absolute top 0 left (350px + 250px)
+  absolute top 0 left (350px + 250px + 1px)
   bottom 0
   right 0
-  background red
   overflow hidden
