--- a/design/stylus/_folder.styl
+++ b/design/stylus/_folder.styl
@@ -11,11 +11,8 @@ $folder-background = hsl(260deg, 10%, 15%)
   .folder-list
     list-style none
     margin 0
+    padding 0
     font-size 0.8rem
-    padding 0 0 10px 0
-
-    &:last-child
-      padding-bottom 0
 
     .folder-heading
       if $theme-flat
