--- a/design/stylus/_modal.styl
+++ b/design/stylus/_modal.styl
@@ -34,7 +34,7 @@ $modal-heading = #DDD
     h3
       margin 0
       padding 0 0 0 10px
-      font-size 1.2rem
+      font-size 18px
       text-align center
       text-shadow 0 -1px 0 lighten($modal-heading, 40%)
 
