--- a/design/stylus/_folder.styl
+++ b/design/stylus/_folder.styl
@@ -64,3 +64,13 @@ $folder-background = hsl(260deg, 10%, 15%)
           box-shadow inset 0 1px 2px darken($brand-blue, 60%)
           text-shadow 0 -1px 0 darken($brand-blue, 60%)
 
+  .subfolder
+    list-style none
+    margin 0
+    padding 0
+    font-size 0.7rem
+    display none
+
+    a
+      padding 5px 30px 5px 26px
+
