--- a/design/stylus/_folder.styl
+++ b/design/stylus/_folder.styl
@@ -17,6 +17,7 @@ $loading-height = 50px
     margin 0
     padding 0
     font-size 0.8rem
+    padding-bottom 10px
 
     .folder-heading
       if $theme-flat
