--- a/design/stylus/_folder.styl
+++ b/design/stylus/_folder.styl
@@ -75,6 +75,8 @@ $loading-height = 50px
     padding 0
     font-size 0.7rem
     display none
+    background darken($folder-background, 40%)
+    box-shadow inset 0 0 4px rgba(#000, 0.5)
 
     a
       padding 5px 30px 5px 26px
