--- a/design/stylus/_message.styl
+++ b/design/stylus/_message.styl
@@ -58,7 +58,6 @@
       vertical-align top
       margin-top 0.5rem
       border-radius 50%
-      margin-right -1px
 
     &.is-important
       background #FFC
@@ -120,13 +119,12 @@
           &::before
             content none
 
-  .homework
-
-    .days-left
+    .tag
       color #FFF
-      font-size 0.8rem
+      font-size 0.7rem
       padding 0 5px
       border-radius 3px
+      vertical-align middle
 
       if $theme-flat
         background $brand-blue
@@ -136,7 +134,7 @@
         text-shadow 0 -1px 0px darken($brand-blue, 20%)
         border 1px solid darken($brand-blue, 20%)
 
-    &.is-important .days-left
+    &.is-important .tag
       $red = #F66
       if $theme-flat
         background $red
