--- a/design/stylus/_message.styl
+++ b/design/stylus/_message.styl
@@ -185,7 +185,6 @@ $pane-message-width = 350px
     box-shadow inset 0 1px 5px #000
     height 0
     transition height 0.2s linear
-    transition-delay 0, 0.2s
 
     $loading-height = 18px
 
@@ -207,13 +206,12 @@ $pane-message-width = 350px
       absolute top 50% left 50%
       $padding = 0px
       height ($loading-height - $padding * 2)
-      width ($pane-message-width * 0.8 - $padding * 2)
       margin-top (-0.5 * @height)
-      margin-left (-0.5 * @width)
+      margin-left (-0.5 * ($pane-message-width * 0.8 - $padding * 2))
       border-radius (0.5 * @height)
       min-width (2 * @border-radius)
 
-      width unit(@width * 0.01, "em")
+      width unit(($pane-message-width * 0.8 - $padding * 2) * 0.01, "em")
 
       box-sizing border-box
 
