--- a/design/stylus/_folder.styl
+++ b/design/stylus/_folder.styl
@@ -1,5 +1,6 @@
 $folder-background = hsl(260deg, 10%, 15%)
 
+$pane-folder-width = 210px
 $loading-height = 50px
 
 .pane-folder
@@ -78,6 +79,7 @@ $loading-height = 50px
     a
       padding 5px 30px 5px 26px
 
+  /*
   .loading 
     font-size 1rem !important
     color rgba(#FFF, 0.5)
@@ -92,4 +94,64 @@ $loading-height = 50px
         display inline-block
         animation spin 2s infinite linear
       
+  */
+
+  $loading-wrap-height = 50px
+
+  transition padding-bottom 0.2s linear
+  &.is-loading
+    padding-bottom $loading-wrap-height
+
+  .loading
+    fixed bottom left
+    width $pane-folder-width
+    height $loading-wrap-height
+    line-height @height
+    transition opacity 0.2s linear
+    background rgba(#000, 0.8)
+    overflow hidden
+
+    height 0
+    transition height 0.2s linear
+
+    background linear-gradient(lighten($folder-background, 12%), lighten($folder-background, 10%))
+    box-shadow inset 0  1px 0 lighten($folder-background, 20%), \
+               inset 0 -1px 0 darken($folder-background, 10%)
+
+    $loading-height = 18px
+
+    &::before
+      content ""
+      absolute top 50% left 50%
+      height $loading-height
+      width ($pane-folder-width * 0.8)
+      margin-top (-0.5 * @height)
+      margin-left (-0.5 * @width)
+      border-radius (0.5 * @height)
+      box-sizing border-box
+      border 1px solid darken($folder-background, 40%)
+      background linear-gradient(darken($folder-background, 30%), darken($folder-background, 10%))
+      box-shadow inset 0 0 2px darken($folder-background, 40%)
+
+    &::after
+      content ""
+      absolute top 50% left 50%
+      $padding = 0px
+      height ($loading-height - $padding * 2)
+      margin-top (-0.5 * @height)
+      margin-left (-0.5 * ($pane-folder-width * 0.8 - $padding * 2))
+      border-radius (0.5 * @height)
+      min-width (2 * @border-radius)
+
+      width unit(($pane-folder-width * 0.8 - $padding * 2) * 0.01, "em")
+
+      box-sizing border-box
+
+      $loading-color = $brand-blue
+      background linear-gradient($loading-color, darken($loading-color, 10%))
+      box-shadow inset 0 1px 0px lighten($loading-color, 20%)
+      border 1px solid darken($loading-color, 80%)
+
+    &.is-visible
+      height $loading-wrap-height
 
