--- a/src/css/main.css
+++ b/src/css/main.css
@@ -1024,6 +1024,24 @@ body {
   overflow-x: hidden;
   overflow-y: auto;
   background: #25222a;
+/*
+  .loading 
+    font-size 1rem !important
+    color rgba(#FFF, 0.5)
+    absolute top 2px right 10px
+    transition opacity 0.2s linear
+    opacity 0
+
+    &.is-visible
+      opacity 1
+
+      i
+        display inline-block
+        animation spin 2s infinite linear
+      
+  */
+  -webkit-transition: padding-bottom 0.2s linear;
+  transition: padding-bottom 0.2s linear;
 }
 .pane-folder .folder-list {
   list-style: none;
@@ -1093,23 +1111,72 @@ body {
 .pane-folder .subfolder a {
   padding: 5px 30px 5px 26px;
 }
+.pane-folder.is-loading {
+  padding-bottom: 50px;
+}
 .pane-folder .loading {
-  font-size: 1rem !important;
-  color: rgba(255,255,255,0.5);
-  position: absolute;
-  top: 2px;
-  right: 10px;
+  position: fixed;
+  bottom: 0;
+  left: 0;
+  width: 210px;
+  height: 50px;
+  line-height: 50px;
   -webkit-transition: opacity 0.2s linear;
   transition: opacity 0.2s linear;
-  opacity: 0;
+  background: rgba(0,0,0,0.8);
+  overflow: hidden;
+  height: 0;
+  -webkit-transition: height 0.2s linear;
+  transition: height 0.2s linear;
+  background: -webkit-gradient(linear, left top, left bottom, color-stop(0, #3e3a47), color-stop(1, #3a3642));
+  background: -webkit-linear-gradient(top, #3e3a47 0%, #3a3642 100%);
+  background: linear-gradient(top, #3e3a47 0%, #3a3642 100%);
+  -webkit-box-shadow: inset 0 1px 0 #4f495a, inset 0 -1px 0 #211f26;
+  box-shadow: inset 0 1px 0 #4f495a, inset 0 -1px 0 #211f26;
+}
+.pane-folder .loading::before {
+  content: "";
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  height: 18px;
+  width: 168px;
+  margin-top: -9px;
+  margin-left: -84px;
+  -webkit-border-radius: 9px;
+  border-radius: 9px;
+  -webkit-box-sizing: border-box;
+  box-sizing: border-box;
+  border: 1px solid #161519;
+  background: -webkit-gradient(linear, left top, left bottom, color-stop(0, #1a181d), color-stop(1, #211f26));
+  background: -webkit-linear-gradient(top, #1a181d 0%, #211f26 100%);
+  background: linear-gradient(top, #1a181d 0%, #211f26 100%);
+  -webkit-box-shadow: inset 0 0 2px #161519;
+  box-shadow: inset 0 0 2px #161519;
+}
+.pane-folder .loading::after {
+  content: "";
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  height: 18px;
+  margin-top: -9px;
+  margin-left: -84px;
+  -webkit-border-radius: 9px;
+  border-radius: 9px;
+  min-width: 18px;
+  width: 1.68em;
+  -webkit-box-sizing: border-box;
+  box-sizing: border-box;
+  background: -webkit-gradient(linear, left top, left bottom, color-stop(0, #4184ef), color-stop(1, #2572ed));
+  background: -webkit-linear-gradient(top, #4184ef 0%, #2572ed 100%);
+  background: linear-gradient(top, #4184ef 0%, #2572ed 100%);
+  -webkit-box-shadow: inset 0 1px 0px #679df2;
+  box-shadow: inset 0 1px 0px #679df2;
+  border: 1px solid #051838;
 }
 .pane-folder .loading.is-visible {
-  opacity: 1;
-}
-.pane-folder .loading.is-visible i {
-  display: inline-block;
-  -webkit-animation: spin 2s infinite linear;
-  animation: spin 2s infinite linear;
+  height: 50px;
 }
 .pane-message {
   position: absolute;
@@ -1121,8 +1188,6 @@ body {
   overflow-y: auto;
   border-right: 1px solid #ccc;
   background: #f6f6f6;
-  -webkit-transition: padding-bottom 0.2s linear;
-  transition: padding-bottom 0.2s linear;
 }
 .pane-message .category-heading {
   color: #666;
@@ -1326,71 +1391,6 @@ body {
   box-shadow: inset 0 1px 0px #858585;
   text-shadow: 0 -1px 0px #525252;
   border: 1px solid #525252;
-}
-.pane-message.is-loading {
-  padding-bottom: 50px;
-}
-.pane-message .loading {
-  position: fixed;
-  bottom: 0;
-  left: 210px;
-  width: 350px;
-  height: 50px;
-  line-height: 50px;
-  -webkit-transition: opacity 0.2s linear;
-  transition: opacity 0.2s linear;
-  background: rgba(0,0,0,0.8);
-  overflow: hidden;
-  background: #333;
-  -webkit-box-shadow: inset 0 1px 5px #000;
-  box-shadow: inset 0 1px 5px #000;
-  height: 0;
-  -webkit-transition: height 0.2s linear;
-  transition: height 0.2s linear;
-}
-.pane-message .loading::before {
-  content: "";
-  position: absolute;
-  top: 50%;
-  left: 50%;
-  height: 18px;
-  width: 280px;
-  margin-top: -9px;
-  margin-left: -140px;
-  -webkit-border-radius: 9px;
-  border-radius: 9px;
-  -webkit-box-sizing: border-box;
-  box-sizing: border-box;
-  border: 1px solid #000;
-  background: -webkit-gradient(linear, left top, left bottom, color-stop(0, #111), color-stop(1, #222));
-  background: -webkit-linear-gradient(top, #111 0%, #222 100%);
-  background: linear-gradient(top, #111 0%, #222 100%);
-  -webkit-box-shadow: inset 0 0px 2px #000;
-  box-shadow: inset 0 0px 2px #000;
-}
-.pane-message .loading::after {
-  content: "";
-  position: absolute;
-  top: 50%;
-  left: 50%;
-  height: 18px;
-  margin-top: -9px;
-  margin-left: -140px;
-  -webkit-border-radius: 9px;
-  border-radius: 9px;
-  min-width: 18px;
-  width: 2.8000000000000003em;
-  -webkit-box-sizing: border-box;
-  box-sizing: border-box;
-  background: -webkit-gradient(linear, left top, left bottom, color-stop(0, #4184ef), color-stop(1, #2572ed));
-  background: -webkit-linear-gradient(top, #4184ef 0%, #2572ed 100%);
-  background: linear-gradient(top, #4184ef 0%, #2572ed 100%);
-  -webkit-box-shadow: inset 0 1px 0px #679df2;
-  box-shadow: inset 0 1px 0px #679df2;
-  border: 1px solid #051838;
-}
-.pane-message .loading.is-visible {
-  height: 50px;
 }
 .pane-content {
   position: absolute;
