--- a/design/stylus/_message.styl
+++ b/design/stylus/_message.styl
@@ -166,3 +166,8 @@ $pane-message-width = 350px
       &.theme-black
         tag(#666)
 
+  .message-loading
+    text-align center
+    padding 10px
+    color #999
+
