--- a/design/stylus/_modal.styl
+++ b/design/stylus/_modal.styl
@@ -18,17 +18,22 @@ $modal-heading = #DDD
   width 500px
   margin-left (-0.5 * @width)
   background lighten($modal-heading, 50%)
-  border 1px solid darken($modal-heading, 10%)
+  if not $theme-flat
+    border 1px solid darken($modal-heading, 10%)
   border-radius 3px
   overflow hidden
   box-shadow 0 1px 5px rgba(#000, 0.5)
 
   .modal-heading
     clearfix()
-    background linear-gradient(lighten($modal-heading, 30%), $modal-heading)
-    box-shadow inset 0  1px 0 lighten($modal-heading, 60%), \
-               inset 0 -1px 0 darken($modal-heading, 20%)
-    border-bottom 1px solid lighten($modal-heading, 30%)
+    if $theme-flat
+      background $modal-heading
+      border-bottom 1px solid darken($modal-heading, 30%)
+    else
+      background linear-gradient(lighten($modal-heading, 30%), $modal-heading)
+      box-shadow inset 0  1px 0 lighten($modal-heading, 60%), \
+                 inset 0 -1px 0 darken($modal-heading, 20%)
+      border-bottom 1px solid lighten($modal-heading, 30%)
     line-height 40px
 
     h3
@@ -36,7 +41,8 @@ $modal-heading = #DDD
       padding 0 0 0 10px
       font-size 18px
       text-align center
-      text-shadow 0 -1px 0 lighten($modal-heading, 40%)
+      if not $theme-flat
+        text-shadow 0 -1px 0 lighten($modal-heading, 40%)
 
       color darken($modal-heading, 60%)
 
@@ -45,8 +51,9 @@ $modal-heading = #DDD
       color darken($modal-heading, 20%)
       cursor pointer
       background darken($modal-heading, 40%)
-      box-shadow inset 0 0px 2px darken($modal-heading, 40%), \
-                       0 0px 2px lighten($modal-heading, 20%)
+      if not $theme-flat
+        box-shadow inset 0 0px 2px darken($modal-heading, 40%), \
+                         0 0px 2px lighten($modal-heading, 20%)
       border-radius 50%
       width 20px
       margin 10px 10px 0 0
