--- a/design/stylus/main.styl
+++ b/design/stylus/main.styl
@@ -7,9 +7,10 @@ vendor-prefixes = webkit official
 
 @import "nib"
 
-$brand-blue = #4184EF
+// $brand-blue = #4184EF
+$brand-blue = #28F
 
-$theme-flat = false
+$theme-flat ?= false
 
 #theme.highlight
   if $theme-flat
