--- a/src/css/doc.css
+++ b/src/css/doc.css
@@ -42,7 +42,7 @@ h6 {
   margin: 30px auto;
   max-width: 550px;
   min-width: 400px;
-  background: #FFF;
+  background:  ghostwhite;
   border: 1px solid #999;
   border-radius: 3px;
   box-shadow: 0px 0px 2px #AAA;
@@ -66,7 +66,7 @@ h6 {
 }
 
 .image-block img {
-  border: 1px solid #666;
+  border: 1px solid #AAA;
   border-radius: 3px;
   margin: 20px;
   margin-right: 30px;
@@ -94,9 +94,10 @@ h6 {
   display: block;
   padding: 10px;
   text-align: center;
-  color: #666;
+  color: #999;
+  text-decoration: none;
 }
 
 .back-link:hover {
-  color: #000;
+  color: #666;
 }
