--- a/src/css/welcome.css
+++ b/src/css/welcome.css
@@ -25,7 +25,7 @@ a:focus {
 }
 
 #menu {
-  line-height: 40px;
+  line-height: 30px;
   height: 40px;
   width: 400px;
   color: #999;
@@ -34,6 +34,11 @@ a:focus {
   left: 50%;
   margin-left: -200px;
   margin-top: 80px;
+}
+
+#version {
+  font-size: 0.8em;
+  font-family: consolas, monospace;
 }
 
 #footer {
