add magenta tag

--- a/design/stylus/_message.styl
+++ b/design/stylus/_message.styl
@@ -147,6 +147,9 @@ $pane-message-width = 350px
       &.theme-red
         tag(#E00)
 
+      &.theme-magenta
+        tag(#C06)
+
       &.theme-yellow
         tag(#EE0, true)
 
