--- a/src/css/main.css
+++ b/src/css/main.css
@@ -1331,6 +1331,16 @@ body {
   text-shadow: 0 -1px 0px #be0000;
   border: 1px solid #be0000;
 }
+.pane-message .message .tag.theme-magenta {
+  color: #f4cce0;
+  background: -webkit-gradient(linear, left top, left bottom, color-stop(0, #c06), color-stop(1, #b8005c));
+  background: -webkit-linear-gradient(top, #c06 0%, #b8005c 100%);
+  background: linear-gradient(top, #c06 0%, #b8005c 100%);
+  -webkit-box-shadow: inset 0 1px 0px #ff0a85;
+  box-shadow: inset 0 1px 0px #ff0a85;
+  text-shadow: 0 -1px 0px #a30052;
+  border: 1px solid #a30052;
+}
 .pane-message .message .tag.theme-yellow {
   color: #2f2f00;
   background: -webkit-gradient(linear, left top, left bottom, color-stop(0, #ee0), color-stop(1, #d6d600));
