--- a/src/css/detail.css
+++ b/src/css/detail.css
@@ -1,16 +1,56 @@
+html {
+  background: url('../image/creampaper.png');
+}
+body {
+	font: 16px / 1.5 "微软雅黑", Helvetica, Serif;
+}
 .page-wrap{
 	margin : 10px;
 	margin-top : 40px;
+	margin: 30px auto;
+	padding: 30px;
+	max-width: 650px;
+	min-width: 400px;
+	background:  ghostwhite;
+	border: 1px solid #999;
+	box-shadow: 0px 0px 2px #AAA;
+	color: #333;
+	position: relative;
+	padding-top : 60px;
+}
+.title {
+	text-align: center;
+	font-size: 1.5em;
 }
 .toolbar{
-	position : fixed;
-	left : 0;
-	right : 0;
-	background : #666;
+	position: absolute;
+	top: 0;
+	left: 0;
+	right: 0;
+
+	background : linear-gradient(rgba(144, 34, 208, 1.0), #508);
+	box-shadow: 0 1px 1px rgba(0, 0, 0, 0.4);
 	color: #FFF;
-	height : 30px;
-	top : 0;
-	line-height: 30px;
+	height : 50px;
+	line-height: 25px;
+	padding: 5px 10px;
+	font-size: 0.8em;
 }
+
+.author {
+}
+.deadline .date::before {
+	content: "截止时间: ";
+}
+.description {
+	float: left;
+}
+
+.toolbar { overflow: hidden; }
 .toolbar ul { padding : 0; margin: 0; list-style: none; }
-.toolbar li { display: inline-block; padding: 0 10px; margin: 0 2px; border-right: 1px solid #888;}
+.toolbar li { display: inline-block; padding: 0 10px; margin: 0 2px; }
+
+.action {
+	float: right;
+}
+
