--- a/src/css/detail.css
+++ b/src/css/detail.css
@@ -1,49 +1,58 @@
 html {
-  background: url('../image/creampaper.png');
+  background: #ECECEC;
 }
-body {
+body, pre {
 	font: 16px / 1.5 "微软雅黑", Helvetica, Serif;
+  color: #444;
 }
-.page-wrap{
-	margin : 10px;
-	margin-top : 40px;
-	margin: 30px auto;
-	padding: 30px;
-	max-width: 650px;
+.page-wrap, .title-wrap {
 	min-width: 400px;
-	background:  ghostwhite;
-	border: 1px solid #999;
-	box-shadow: 0px 0px 2px #AAA;
-	color: #333;
-	position: relative;
 }
-.title {
+.page-wrap {
+	max-width: 700px;
+  margin: 0 auto;
+}
+.title-wrap {
 	text-align: center;
-	font-size: 1.5em;
-	border-bottom: 1px solid #CCC;
-	padding: 0 0 10px 0;
-}
-.toolbar{;
-	padding: 10px;
-	color: #555;
-	text-align: right;
+	border-top: 1px solid rgba(0,0,0,0.2);
+	border-bottom: 1px solid rgba(0,0,0,0.8);
+  padding: 10px 20px;
+  box-sizing: border-box;
 
-	/*
-	background : linear-gradient(rgba(144, 34, 208, 1.0), #508);
-	box-shadow: 0 1px 1px rgba(0, 0, 0, 0.4), inset 0 1px 1px rgba(193, 95, 250, 1.0);
-	color: #FFF;
-	text-shadow: 0 1px 1px rgba(0,0,0,0.7);
-	border: 1px solid #508;
-	height : 50px;
-	line-height: 25px;
-	padding: 5px 10px;
-	*/
+  text-shadow: 0 -1px 0 rgba(0,0,0,0.6);
+
+  box-shadow: inset 0 1px 0 rgba(255,255,255,0.1);
+  background: linear-gradient(transparent, rgba(0,0,0,0.3)), #193D88;
+  color: rgba(255,255,255,0.9);
+}
+
+
+.title {
+  margin: 0;
+  padding: 0;
+	font-size: 24px;
+  font-weight: normal;
+}
+
+.toolbar{
+  margin-top: 5px;
+	padding: 10px;
+	color: #AAA;
+  border-bottom: 1px solid #FFF;
+  box-shadow: inset 0 -1px 0 #CCC;
 }
 
 .courseName {
+  line-height: 30px;
+	font-size: 16px;
 }
+
 .author, .date {
-	font-size: 0.8em;
+  line-height: 20px;
+	font-size: 12px;
+}
+.author::before {
+	content: "- 发布者: ";
 }
 .deadline .date::before {
 	content: "截止时间: ";
@@ -54,9 +63,35 @@ body {
 
 .toolbar { overflow: hidden; }
 .toolbar ul { padding : 0; margin: 0; list-style: none; }
-.toolbar li { display: inline-block; padding: 0 10px; margin: 0 2px; }
+.toolbar li { display: inline-block; padding: 0 5px; margin: 0 2px; }
 
 .action {
 	float: right;
 }
 
+.action a {
+  color: #BBB;
+  text-decoration: none;
+  line-height: 50px;
+  transition: color 0.2s linear;
+}
+
+.action a:hover {
+  color: #666;
+}
+
+.deadline .author {
+  display: none;
+}
+
+.content, .misc-content {
+  padding: 0 20px;
+}
+
+.misc-content {
+  color: #AAA;
+}
+
+a {
+  color: #444;
+}
