--- a/design/stylus/_message.styl
+++ b/design/stylus/_message.styl
@@ -148,7 +148,7 @@ $pane-message-width = 350px
         tag(#E00)
 
       &.theme-magenta
-        tag(#C06)
+        tag(#E91981)
 
       &.theme-yellow
         tag(#EE0, true)
@@ -160,7 +160,7 @@ $pane-message-width = 350px
         tag(#4A4)
 
       &.theme-purple
-        tag(#92D)
+        tag(#7E08BE)
 
       &.theme-white
         tag(#EEE, true)
