--- a/src/css/detail.css
+++ b/src/css/detail.css
@@ -83,6 +83,9 @@ body, pre {
   line-height: 50px;
   transition: color 0.2s linear;
 }
+.action a.active {
+  color: #DF7CEC;
+}
 
 .action a:hover {
   color: #666;
